Basic rtl (#997)
* RTL for vanilla bootstrap is added

* RTL support for bootswatch was added

(cherry picked from commit c1fe914a05581f6424a6f95d58434067ee1e5a70)